--- a/WebProject/MvcWithAngular2.csproj
+++ b/WebProject/MvcWithAngular2.csproj
@@ -104,6 +104,8 @@
     <TypeScriptCompile Include="app\app.module.ts" />
     <TypeScriptCompile Include="app\app.routing.ts" />
     <TypeScriptCompile Include="app\dashboard\dashboard.component.ts" />
+    <Content Include="app\hero-detail\hero-detail.component.template.html" />
+    <TypeScriptCompile Include="app\hero-detail\hero-detail.component.ts" />
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\models\hero.ts" />
     <TypeScriptCompile Include="app\personalCabinet\personalCabinet.component.ts" />
